adding form HTML and font family

--- a/Checkpoint.html
+++ b/Checkpoint.html
@@ -3,6 +3,9 @@
     <head>
         <meta charset="UTF-8">
         <title>profilo</title>
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="./style.css"/>
     </head>
     <body>
@@ -45,6 +48,12 @@
             <section>
                 <h2 id="Contact" style="color: red;">Contact</h2>
                 <a href=mailto:achraf.souiilem@gmail.com>Send email</a>
+                <form>
+                    <br>
+                    <label>Name:</label>
+                    <input type="text" name="first name" placeholder="Type your name here"/>
+                    <br />
+                </form>
             </section>
         </main>
         <footer>
